# pse

./: README.md  SlideExtractor.spec  app_icon.py  build_cross_platform.py  build_mac_app.py  build_mac_app_improved.py  build_mac_app_with_dylibs.py  build_windows_app.py  dylib_finder.py  mac_app_diagnostics.py  main.py  pyproject.toml  requirements.txt  run_gui.py
clipimgfromvideo/: __init__.py  gui.py  pyproject.toml  slide_detector.py  utils.py  video_processor.py
icons/: app_icon.icns
